...
        android:label="BooksGridFragment" >
        <action
            android:id="@+id/action_booksGridFragment_to_editBookFragment"
            app:destination="@id/editBookFragment" />
        <action
            android:id="@+id/action_booksGridFragment_to_addBookFragment"
            app:destination="@id/addBookFragment" />
    </fragment>
    <fragment
        android:id="@+id/editBookFragment"
        android:name="cat.itb.readbooks.Activities.EditBookFragment"
        android:label="EditBookFragment" >
        <argument
...
